--- a/RepoZ.App.Win/MainWindow.xaml
+++ b/RepoZ.App.Win/MainWindow.xaml
@@ -1,37 +1,33 @@
-﻿<Controls:MetroWindow x:Class="RepoZ.App.Win.MainWindow"
-					  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-					  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-					  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-					  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-					  xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
-					  mc:Ignorable="d"
-					  xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-					  xmlns:controls="clr-namespace:RepoZ.App.Win.Controls"
-					  xmlns:converters="clr-namespace:RepoZ.App.Win.Converters"
-					  TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-					  TextElement.FontWeight="Regular"
-					  TextElement.FontSize="12"
-					  TextOptions.TextFormattingMode="Ideal"
-					  TextOptions.TextRenderingMode="Auto"
-					  Background="{DynamicResource MaterialDesignPaper}"
-					  FontFamily="{DynamicResource MaterialDesignFont}"
-					  GlowBrush="{DynamicResource AccentColorBrush}"
-					  BorderThickness="1"
-					  TitleCharacterCasing="Normal"
-					  Title="RepoZ"
-					  Height="500"
-					  Width="350"
-					  ShowMaxRestoreButton="False"
-					  ShowInTaskbar="False"
-					  ShowCloseButton="False"
-					  ShowMinButton="False"
-					  IsMinButtonEnabled="False"
-					  IsMaxRestoreButtonEnabled="False"
-					  IsCloseButtonEnabled="False">
+﻿<Window x:Class="RepoZ.App.Win.MainWindow"
+						xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+						xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+						xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+						xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+						xmlns:fw="clr-namespace:SourceChord.FluentWPF;assembly=FluentWPF"
+						xmlns:Controls="http://metro.mahapps.com/winfx/xaml/controls"
+						mc:Ignorable="d"
+						xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+						xmlns:controls="clr-namespace:RepoZ.App.Win.Controls"
+						xmlns:converters="clr-namespace:RepoZ.App.Win.Converters"
+						TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+						TextElement.FontWeight="Regular"
+						TextElement.FontSize="12"
+						TextOptions.TextFormattingMode="Ideal"
+						TextOptions.TextRenderingMode="Auto"
+						BorderThickness="0"
+						Title="RepoZ"
+						Height="500"
+						Width="350"
+						ShowInTaskbar="False"
+						fw:AcrylicWindow.TintColor="#101010"
+						fw:AcrylicWindow.FallbackColor="#303030"
+						fw:AcrylicWindow.TintOpacity="0.7"
+						fw:AcrylicWindow.ShowTitleBar="False"
+						fw:AcrylicWindow.Enabled="True">
 	<Window.Resources>
 		<converters:UtcToHumanizedLocalDateTimeConverter x:Key="UtcToHumanizedLocalDateTimeConverter" />
 	</Window.Resources>
-	<Grid Margin="10"
+	<Grid Margin="10" 
 		  Focusable="False">
 
 		<materialDesign:Transitioner Name="transitionerMain"
@@ -52,49 +48,22 @@
 
 				<DockPanel x:Name="dockMain"
 						   Focusable="False">
-					<DockPanel
+					<Grid
 						Focusable="False"
 						DockPanel.Dock="Top">
-						<Button 
-							Name="MenuButton" 
-							Click="MenuButton_Click"
-							DockPanel.Dock="Right"
-							Content="☰" 
-							HorizontalAlignment="Center" 
-							Padding="0"
-							VerticalAlignment="Center" 
-							Width="32" 
-							Cursor="Arrow" 
-							FontSize="17"
-							Background="#00FFF0F0"
-							Margin="10,0,0,0"
-							Foreground="{DynamicResource MaterialDesignBody}"
-							Style="{DynamicResource MaterialDesignFlatButton}">
-							<Button.ContextMenu>
-								<ContextMenu x:Name="SettingsMenu" FontSize="14">
-									<MenuItem Header="⚡ Scan computer" Click="ScanButton_Click" x:Name="ScanMenuItem"/>
-									<MenuItem Header="🕒 Auto fetch">
-										<MenuItem Header="💤 Off" IsCheckable="True" IsChecked="{Binding AutoFetchOff}"/>
-										<MenuItem Header="😇 Discretely" IsCheckable="True" IsChecked="{Binding AutoFetchDiscretely}"/>
-										<MenuItem Header="😅 Adequate" IsCheckable="True" IsChecked="{Binding AutoFetchAdequate}"/>
-										<MenuItem Header="😈 Aggresive" IsCheckable="True" IsChecked="{Binding AutoFetchAggresive}"/>
-									</MenuItem>
-									<Separator/>
-									<MenuItem Header="💙 Ping back" Foreground="#FFED8888">
-										<MenuItem Header="🌟 Star RepoZ on GitHub" Click="StarButton_Click" Foreground="{DynamicResource MaterialDesignBody}" />
-										<MenuItem Header="🐤 Follow @Waescher" Click="FollowButton_Click" Foreground="{DynamicResource MaterialDesignBody}"/>
-										<Separator/>
-										<MenuItem Header="☕ Buy me a coffee" Click="CoffeeButton_Click" Foreground="{DynamicResource MaterialDesignBody}"/>
-									</MenuItem>
-									<Separator/>
-									<MenuItem Header="✋ Help" Click="HelpButton_Click"/>
-								</ContextMenu>
-							</Button.ContextMenu>
-						</Button>
-
+						<Grid.RowDefinitions>
+							<RowDefinition Height="*" />
+						</Grid.RowDefinitions>
+						<Grid.ColumnDefinitions>
+							<ColumnDefinition Width="*" />
+							<ColumnDefinition Width="Auto" />
+							<ColumnDefinition Width="Auto" />
+						</Grid.ColumnDefinitions>
 						<Grid 
-							DockPanel.Dock="Left"
-						  Focusable="False" >
+							HorizontalAlignment="Stretch"
+							Focusable="False" 
+							Grid.Column="0"
+							>
 							<controls:ZTextBox x:Name="txtFilter"
 										   TextChanged="txtFilter_TextChanged"
 										   FontSize="17"
@@ -125,7 +94,59 @@
 							</TextBlock>
 
 						</Grid>
-					</DockPanel>
+						<Button 
+							Name="MenuButton" 
+							Click="MenuButton_Click"
+							Content="☰" 
+							HorizontalAlignment="Center"
+							Padding="0"
+							VerticalAlignment="Center" 
+							Width="32" 
+							Cursor="Arrow" 
+							FontSize="17"
+							Background="#00FFF0F0"
+							Margin="10,0,0,0"
+							Grid.Column="1"
+							Foreground="{DynamicResource MaterialDesignBody}"
+							Style="{DynamicResource MaterialDesignFlatButton}">
+							<Button.ContextMenu>
+								<ContextMenu x:Name="SettingsMenu" FontSize="14">
+									<MenuItem Header="⚡ Scan computer" Click="ScanButton_Click" x:Name="ScanMenuItem"/>
+									<MenuItem Header="🕒 Auto fetch">
+										<MenuItem Header="💤 Off" IsCheckable="True" IsChecked="{Binding AutoFetchOff}"/>
+										<MenuItem Header="😇 Discretely" IsCheckable="True" IsChecked="{Binding AutoFetchDiscretely}"/>
+										<MenuItem Header="😅 Adequate" IsCheckable="True" IsChecked="{Binding AutoFetchAdequate}"/>
+										<MenuItem Header="😈 Aggresive" IsCheckable="True" IsChecked="{Binding AutoFetchAggresive}"/>
+									</MenuItem>
+									<Separator/>
+									<MenuItem Header="💙 Ping back" Foreground="#FFED8888">
+										<MenuItem Header="🌟 Star RepoZ on GitHub" Click="StarButton_Click" Foreground="{DynamicResource MaterialDesignBody}" />
+										<MenuItem Header="🐤 Follow @Waescher" Click="FollowButton_Click" Foreground="{DynamicResource MaterialDesignBody}"/>
+										<Separator/>
+										<MenuItem Header="☕ Buy me a coffee" Click="CoffeeButton_Click" Foreground="{DynamicResource MaterialDesignBody}"/>
+									</MenuItem>
+									<Separator/>
+									<MenuItem Header="✋ Help" Click="HelpButton_Click"/>
+								</ContextMenu>
+							</Button.ContextMenu>
+						</Button>
+						<Button
+							Content="🡱"
+							HorizontalAlignment="Center"
+							Padding="0"
+							VerticalAlignment="Center" 
+							Width="32" 
+							Cursor="Arrow" 
+							FontSize="17"
+							Background="#00FFF0F0"
+							Margin="10,0,0,0"
+							x:Name="UpdateButton"
+							Visibility="Visible"
+							Grid.Column="2"
+							Foreground="{DynamicResource MaterialDesignBody}"
+							Style="{DynamicResource MaterialDesignFlatButton}"
+							Click="UpdateButton_Click" />
+					</Grid>
 
 					<ListBox Name="lstRepositories"
 							 DockPanel.Dock="Top"
@@ -179,13 +200,4 @@
 
 	</Grid>
 
-	<Controls:MetroWindow.RightWindowCommands>
-		<Controls:WindowCommands>
-			<Button Content="🡱 Update"
-					x:Name="UpdateButton"
-					Visibility="Hidden"
-					Click="UpdateButton_Click" />
-		</Controls:WindowCommands>
-	</Controls:MetroWindow.RightWindowCommands>
-
-</Controls:MetroWindow>
+</Window>
