Add blurred sub menus

--- a/RepoZ.App.Win/App.xaml
+++ b/RepoZ.App.Win/App.xaml
@@ -95,6 +95,8 @@
 			<Style TargetType="{x:Type controls:AcrylicContextMenu}"
 				   BasedOn="{StaticResource {x:Type ContextMenu}}" />
 
+			<Style TargetType="{x:Type controls:AcrylicMenuItem}"
+				   BasedOn="{StaticResource {x:Type MenuItem}}" />
 
 		</ResourceDictionary>
 
