Make the popup immediate on Windows

--- a/RepoZ.App.Win/NotifyIconResources.xaml
+++ b/RepoZ.App.Win/NotifyIconResources.xaml
@@ -28,6 +28,7 @@
 	<tb:TaskbarIcon x:Key="NotifyIcon"
                     IconSource="/App.ico"
                     LeftClickCommand="{Binding OpenCommand}"
+					NoLeftClickDelay="True"
                     ContextMenu="{StaticResource SysTrayMenu}">
 
 		<!-- self-assign a data context (could also be done programmatically) -->
